// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global component extracts the styles rather than inlines it 1`] = `
Object {
  "css": ".css-1lrxbo5{color:hotpink;}html{color:green;}",
  "html": "<div class=\\"css-1lrxbo5\\"></div>",
  "ids": Array [
    "1lrxbo5",
    "1vwj31w",
  ],
}
`;

exports[`it works 1`] = `
Object {
  "css": ".css-1lrxbo5{color:hotpink;}",
  "html": "<div class=\\"css-1lrxbo5\\"></div>",
  "ids": Array [
    "1lrxbo5",
  ],
}
`;
